solved accessibility issue: 'content doesn't adapt to landscape orientation on mobile devices'

--- a/apihub-root/lightweight-pwa/css/main.css
+++ b/apihub-root/lightweight-pwa/css/main.css
@@ -183,9 +183,9 @@ b {
     width: 8%;
     aspect-ratio: 1/1;
     background-size: contain;
-    position: relative;
+    position: absolute;
     float: right;
-    top: 40%;
+    top: 5%;
     right: 7%;
     border: 0;
 }
@@ -216,7 +216,7 @@ b {
     z-index: 10;
     text-align: left;
     padding: 5px 0px;
-    top: 10%;
+    top: calc(7% + 10px);
     font-size: 1.2rem;
     box-shadow: 0px 15px 20px rgba(28, 34, 40, 0.3);
     list-style-type: none;
@@ -569,7 +569,7 @@ b {
     position: relative;
 }
 
-.modal-header.centred-header {
+.modal-header.centered-header {
     height: 18vh;
     position: relative;
     border-top-right-radius: 30px;
@@ -588,7 +588,7 @@ b {
     height: fit-content;
 }
 
-.modal-header.centred-header .icon-title-container {
+.modal-header.centered-header .icon-title-container {
     display: flex;
     flex-direction: column;
     height: 100%;
@@ -619,7 +619,7 @@ b {
     text-overflow: ellipsis;
 }
 
-.modal-header.centred-header .modal-title {
+.modal-header.centered-header .modal-title {
     text-align: center;
 }
 
@@ -665,7 +665,7 @@ b {
     background-position: center;
 }
 
-.modal-header.centred-header .modal-icon {
+.modal-header.centered-header .modal-icon {
     height: 22%;
     width: 100%;
     background-position: center;
@@ -898,7 +898,7 @@ body[dir="RTL"] #leaflet-content h5 {
     padding-left: 10%;
 }
 
-@media only screen and (max-device-width: 900px) {
+@media only screen and (max-device-width: 768px) {
     body, .page-container {
         background: var(--olivegreen);
         height: 100%;
@@ -1079,7 +1079,7 @@ body[dir="RTL"] #leaflet-content h5 {
         height: auto;
     }
 
-    .modal-header.centred-header {
+    .modal-header.centered-header {
         border-top-right-radius: 60px;
         border-top-left-radius: 60px;
     }
@@ -1170,11 +1170,37 @@ body[dir="RTL"] #leaflet-content h5 {
     }
 }
 
-@media only screen and (orientation: landscape) {
+@media only screen and (orientation: landscape) and (max-device-width: 768px) {
     body {
         min-height: 1000px;
         min-width: 435px;
         width: 24%;
         margin: auto;
+        background-image: url(./../images/background.jpg);
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+    }
+    .modal-header.centered-header {
+        height: 48vh;
+        border-top-left-radius: inherit;
+        border-top-right-radius: inherit;
+    }
+    .modal-container {
+        position: relative;
+    }
+    .popup-modal .modal-content {
+        border-radius: inherit;
+        top: -22px;
+    }
+    .modal-header .close-modal {
+        height: 3vw;
+        width: 3vw;
+    }
+    .scan-button.go-home-button {
+        position: absolute;
+    }
+    .proceed-button {
+        height: 14%;
     }
 }
